# arbitrary_precision_residual

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
include/: arbitrary_precision_residual.hpp  highprecision_csr.hpp
python/: CMakeLists.txt  main.cpp
python/arbitrary_precision_residual/: __init__.py
python/examples/: main.py  power.py
python/hpresidual/: __init__.py
python/src/: main.cpp
python/src/hpresidual/: __init__.py
src/: arbitrary_precision_residual.cpp  highprecision_csr.cpp  main.cpp
