set(PYBIND11_FINDPYTHON ON)
pybind11_add_module(_core MODULE src/main.cpp)
install(TARGETS _core DESTINATION .)
target_link_libraries(_core PRIVATE HighprecisionCSR)
set_target_properties(_core PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
set_target_properties(_core PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
target_compile_definitions(_core PRIVATE VERSION_INFO=${PROJECT_VERSION})