set(PYBIND11_FINDPYTHON ON)
pybind11_add_module(_hpresidual_core MODULE main.cpp)
install(TARGETS _hpresidual_core DESTINATION .)
target_link_libraries(_hpresidual_core PRIVATE HighprecisionCSR)
set_target_properties(_hpresidual_core PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
set_target_properties(_hpresidual_core PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
target_compile_definitions(_hpresidual_core PRIVATE VERSION_INFO=${PROJECT_VERSION})