set(PYBIND11_FINDPYTHON ON)
pybind11_add_module(_arbitrary_precision_residual_core MODULE main.cpp)
install(TARGETS _arbitrary_precision_residual_core DESTINATION .)
target_link_libraries(_arbitrary_precision_residual_core PRIVATE ArbitraryPrecisionResidual)
set_target_properties(_arbitrary_precision_residual_core PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
set_target_properties(_arbitrary_precision_residual_core PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
target_compile_definitions(_arbitrary_precision_residual_core PRIVATE VERSION_INFO=${PROJECT_VERSION})